= 1.3 : May 29th, 2014 = * fixed : (css) added z-index:0 to the .fpc-container selector
git-svn-id: https://plugins.svn.wordpress.org/featured-pages-customizer/trunk@922985 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/front/assets/css/fpc-front.css
+++ b/front/assets/css/fpc-front.css
@@ -5,7 +5,8 @@
   margin-left: auto!important;
   *zoom: 1;
   clear: both;
-  position: relative
+  position: relative;
+  z-index: 0;
 }
 .fpc-container:after,.fpc-container:before {
   display: table;
